[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Mole/shotgun.png" type="Texture" id=1]
[ext_resource path="res://src/Items/Shotgun.gd" type="Script" id=2]
[ext_resource path="res://Assets/Decoration/interact1 (1).png" type="Texture" id=3]
[ext_resource path="res://Assets/Decoration/interact2 (1).png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 4 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 2.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 7, 4 )

[node name="Shotgun" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 8
script = ExtResource( 2 )

[node name="Shotgun" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="E" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, -15 )
z_index = 6
frames = SubResource( 2 )
frame = 1
playing = true

[node name="DetectPlayer" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectPlayer"]
position = Vector2( 0, 1 )
shape = SubResource( 3 )

[connection signal="body_entered" from="DetectPlayer" to="." method="_on_DetectPlayer_body_entered"]
[connection signal="body_exited" from="DetectPlayer" to="." method="_on_DetectPlayer_body_exited"]
